--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         .style("stroke-width", "1px")
                         .style("fill", (d, i) => '#e5e5e5')
                         .style("opacity", ".6");
-
+                        console.log(locations);
                         this.locations = locations;
                         drawMarkers();                   
                     });
