--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script>
             const width = 950;
             const height = 500;
-            const locations = [];
+            let locations = [];
             const svg = d3.select('svg')
                 .attr('width', width).attr('height', height);
             const markerGroup = svg.append('g');
