--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             const path = d3.geoPath().projection(projection);
             const center = [width/2, height/2];
 
-            init();    
+            drawGlobe();    
             drawGraticule();
             enableRotation();    
 
-            function init() {  
+            function drawGlobe() {  
                 d3.queue()
                     .defer(d3.json, 'https://gist.githubusercontent.com/mbostock/4090846/raw/d534aba169207548a8a3d670c9c2cc719ff05c47/world-110m.json')          
                     .defer(d3.json, 'locations.json')
